# estadias_base

./: .gitignore  pyproject.toml
estadiasyviajes/: manage.py
estadiasyviajes/core/: admin.py  form.py  models.py  urls.py  views.py
estadiasyviajes/core/migrations/: 0001_initial.py  0002_remove_plan_commercialimages_and_more.py  0002_remove_propietary_user.py  0003_alter_status_options_propietary_user.py  0003_rename_fechacreacion_plan_creationdate.py  0004_alter_commercial_options.py  0004_rename_horacreacion_plan_creationtime.py
estadiasyviajes/core/templates/: createCommercialImage.html  footer.html  sidebar.html
estadiasyviajes/core/templates/core/: accommodation_confirm_delete.html  accommodation_form.html  accommodation_list.html  commercial_confirm_delete.html  commercial_form.html  commercial_list.html  createCommercial.html  image_accommodation_form.html  plan_list.html  propietary_form.html  propietary_list.html  testupdate.html  updateCommercial.html  update_plan.html
estadiasyviajes/estadiasyviajes/: asgi.py  db.py  settings.py  urls.py  wsgi.py
estadiasyviajes/members/: form.py  views.py
